codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_timed_non_stop.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                          │
│                                                                    │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date      │
│ information on rate limits and credits                             │
│                                                                    │
│  Model:         gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Non-stop:      timed (30m 00s)                                    │
│  Directory: [[workspace]]                                          │
│  Permissions:   Custom (read-only, on-request)                     │
│  Agents.md:     /root/code/worktrees/dft/wt-2/AGENTS.md            │
│                                                                    │
│  Token usage:   0 total  (0 input + 0 output)                      │
│  Limits:        data not available yet                             │
╰────────────────────────────────────────────────────────────────────╯
